// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  displayCharacterLeft: false
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--readonly mg-input--text mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <strong></strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: 'blu'
}: 1`] = `
<mg-input-text value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          blu
        </strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon>
              <mock:shadow-root>
                <svg aria-hidden="true" class="mg-icon mg-icon--info-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                  <path d="M8 .67A7.33 7.33 0 1 0 15.33 8 7.33 7.33 0 0 0 8 .67ZM9 12a.29.29 0 0 1-.3.3H7.35a.29.29 0 0 1-.3-.3V7.32A.29.29 0 0 1 7.33 7h1.32a.29.29 0 0 1 .35.3Zm0-6.74a.29.29 0 0 1-.3.3H7.35a.29.29 0 0 1-.3-.3V4a.29.29 0 0 1 .28-.3h1.32a.29.29 0 0 1 .3.28V4Z" fill="currentColor"></path>
                </svg>
              </mock:shadow-root>
            </mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--text mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
        <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
          <mg-icon>
            <mock:shadow-root>
              <svg aria-hidden="true" class="mg-icon mg-icon--info-circle mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                <path d="M8 .67A7.33 7.33 0 1 0 15.33 8 7.33 7.33 0 0 0 8 .67ZM9 12a.29.29 0 0 1-.3.3H7.35a.29.29 0 0 1-.3-.3V7.32A.29.29 0 0 1 7.33 7h1.32a.29.29 0 0 1 .35.3Zm0-6.74a.29.29 0 0 1-.3.3H7.35a.29.29 0 0 1-.3-.3V4a.29.29 0 0 1 .28-.3h1.32a.29.29 0 0 1 .3.28V4Z" fill="currentColor"></path>
              </svg>
            </mock:shadow-root>
          </mg-icon>
        </mg-tooltip>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  type: 'search',
  icon: 'magnifying-glass'
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-icon mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <mg-icon>
              <mock:shadow-root>
                <svg aria-hidden="true" class="mg-icon mg-icon--magnifying-glass mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                  <path d="M11.24 9.5c1.48-2.44.71-5.62-1.73-7.1-.05-.03-.11-.07-.17-.1A5.232 5.232 0 0 0 2.52 4C.94 6.38 1.6 9.59 3.98 11.17a5.142 5.142 0 0 0 5.54.1L12.3 14c.39.39 1.02.39 1.41 0l.33-.33a.996.996 0 0 0 0-1.41l-2.8-2.76Zm-4.4.5c-1.76.02-3.2-1.4-3.22-3.16-.02-1.76 1.4-3.2 3.16-3.22 1.76-.02 3.2 1.4 3.22 3.16v.06A3.193 3.193 0 0 1 6.84 10Z" fill="currentColor"></path>
                </svg>
              </mock:shadow-root>
            </mg-icon>
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title class="sr-only" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--text mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', type: 'search' }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with slot. 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--is-input-group-append mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <mg-button slot="append-input">
    <!---->
    <button aria-disabled="false" aria-label="search" class="mg-button mg-button--primary" id="identifier" type="submit">
      <div class="mg-button__content">
        <mg-icon>
          <mock:shadow-root>
            <svg aria-hidden="true" class="mg-icon mg-icon--magnifying-glass mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
              <path d="M11.24 9.5c1.48-2.44.71-5.62-1.73-7.1-.05-.03-.11-.07-.17-.1A5.232 5.232 0 0 0 2.52 4C.94 6.38 1.6 9.59 3.98 11.17a5.142 5.142 0 0 0 5.54.1L12.3 14c.39.39 1.02.39 1.41 0l.33-.33a.996.996 0 0 0 0-1.41l-2.8-2.76Zm-4.4.5c-1.76.02-3.2-1.4-3.22-3.16-.02-1.76 1.4-3.2 3.16-3.22 1.76-.02 3.2 1.4 3.22 3.16v.06A3.193 3.193 0 0 1 6.84 10Z" fill="currentColor"></path>
            </svg>
          </mock:shadow-root>
        </mg-icon>
        Search
      </div>
    </button>
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text Should render with slot. 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--is-append-input-slot-content mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <span slot="append-input">
    test
  </span>
</mg-input-text>
`;

exports[`mg-input-text Should render with slot. 3`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="search">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <mg-button is-icon="" slot="append-input">
    <!---->
    <button aria-disabled="false" aria-label="cancel" class="mg-button mg-button--icon mg-button--primary" id="identifier-cancel" type="submit">
      <div class="mg-button__content">
        <mg-icon>
          <mock:shadow-root>
            <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
              <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
            </svg>
          </mock:shadow-root>
        </mg-icon>
      </div>
    </button>
  </mg-button>
  <mg-button is-icon="" slot="append-input">
    <!---->
    <button aria-disabled="false" aria-label="validate" class="mg-button mg-button--icon mg-button--primary" id="identifier-validate" type="submit">
      <div class="mg-button__content">
        <mg-icon>
          <mock:shadow-root>
            <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
              <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
            </svg>
          </mock:shadow-root>
        </mg-icon>
      </div>
    </button>
  </mg-button>
</mg-input-text>
`;

exports[`mg-input-text Should trigger events 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-help-text" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error message with locale: fr 1`] = `
<mg-input-text lang="fr">
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error message with locale: xx 1`] = `
<mg-input-text lang="xx">
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error with displayError component's public method 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text display error with displayError component's public method 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" required="" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is disabled validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is disabled validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" disabled="" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is readonly validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 7;">
            <input aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="400" name="identifier" type="text">
            <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
          </div>
          <slot name="append-input"></slot>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text validity, case next state is readonly validity ({ validity: false, valueMissing: true, patternMismatch: false }), valueMissing (%s), patternMismatch (%s) 2`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
        <slot name="append-input"></slot>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;
